-----------------------------------
- Update the copyright lines for 2023
- Include support for Python 3.11 in setup.py
- Update RFC9215 to use OID names from RFC 9215 for GOST R 34.10-2012
- Added RFC9385 providing GOST R 34.10-2012 Algorithm for IKEv2
- Added RFC9345 providing Delegated Credentials for TLS and DTLS
- Added RFC3546 providing PkiPath as used in TLS Extensions

Revision 0.4.2, released 09-01-2023
-----------------------------------
- Added RFC2898 providing PKCS #5, Version 2.0
- Added RFC9215 providing GOST R 34.10-2012 and GOST R 34.11-2012 Algorithms
- Added RFC5698 providing Data Structure for the Security Suitability of
  Cryptographic Algorithms (DSSC)
- Added RFC9286 providing RPKI Manifests, which obsoletes RFC6484
- Improve tests for RFC2985, RFC370, RFC3657, RFC4010, RFC4055, RFC6494,
  RFC7914, and RFC8692
- Added RFC9289 providing Extended Key Usage values for RPC over TLS
- Modified RFC9286 to apply https://www.rfc-editor.org/errata/eid7118
- Added RFC9323 providing RPKI Signed Checklist (RSC)
- Added RFC9336 providing Extended Key Usage (EKU) for Document Signing
- Added RFC9337 providing GOST Algorithms with PKCS#5
- Correct typo in a comment in RFC8708
- Added RFC9310 providing 5G NF Types certificate extension

Revision 0.4.1, released 16-02-2022
-----------------------------------
- Update RFC4210 to import from RFC 5280, RFC 4211, and RFC6402 instead of
  earlier RFCs covering the same things
- Update RFC4211 to import from RFC 5280 and RFC5252 instead of earlier
  RFCs covering the same things, and to include an opentype map for
  AttributeTypeAndValue
- Add RFC9118 providing Enhanced JWT Claim Constraints certificate extension
- Add RFC2743 providing GSSAPI Tokens
- Add addon providing a place for features that are not supported by pyasn1;
  addon.RelativeOID is the first add-on feature
- Add RFC5794 providing the ARIA Encryption Algorithm
- Add RFC9174 providing naming and extended key usage for the Delay-Tolerant